crates/pane-tui/src/ui/snapshots/pane__ui__tests_palette__leader_compact_hints_root.snap
---
source: crates/pane-tui/src/ui/tests_palette.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  zsh                                                                                                              +  │
│ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                         ╭ ⎵ ───────────────────────────────────────────────────────────────╮                         │
│                         │ w +window       j focus down    l focus right                    │                         │
│                         │ h focus left    k focus up                                       │                         │
│                         │                                                                  │                         │
│                         │                                                                  │                         │
│                         ╰──────────────────────────────────────────────────────────────────╯                         │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  Esc  cancel
