crates/pane-tui/src/ui/snapshots/pane__ui__tests_palette__palette_filtered_split.snap
---
source: crates/pane-tui/src/ui/tests_palette.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  zsh                                                                                                              +  │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                       ╭ command ─────────────────────────────────────────────────────────────╮                       │
│                       │  split_                                                              │                       │
│                       │──────────────────────────────────────────────────────────────────────│                       │
│                       │  Split Right — Split the focused window horizontally       Space d   │                       │
│                       │  Split Down — Split the focused window vertically          Space D   │                       │
│                       │  Equalize Panes — Reset all split ratios to equal        Space w =   │                       │
│                       │  Toggle Fold — Fold or unfold the focused split                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       ╰──────────────────────────────────────────────────────────────────────╯                       │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  type  filter ·  Enter  run ·  Esc  cancel
