crates/pane-tui/src/ui/snapshots/pane__ui__tests_palette__palette_no_match.snap
---
source: crates/pane-tui/src/ui/tests_palette.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  zsh                                                                                                                +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                        ╭ command ─────────────────────────────────────────────────────────────╮
                        │  xyznonexistent_                                                     │
                        │──────────────────────────────────────────────────────────────────────│
                        │                                                                      │
                        │                                                                      │
                        │                                                                      │
                        │                                                                      │
                        │                                                                      │
                        │                                                                      │
                        │                                                                      │
                        │                                                                      │
                        │                                                                      │
                        │                                                                      │
                        │                                                                      │
                        │                                                                      │
                        │                                                                      │
                        │                                                                      │
                        ╰──────────────────────────────────────────────────────────────────────╯
  type  filter ·  Enter  run ·  Esc  cancel
