crates/pane-tui/src/ui/snapshots/pane__ui__tests_palette__palette_small_terminal.snap
---
source: crates/pane-tui/src/ui/tests_palette.rs
expression: output
---
╭──────────────────────────────────────────────────────────╮
│  1                                                    +  │
╰──────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────╮
│  zsh                                                  +  │
│           ╭ command ─────────────────────────╮           │
│           │  _                               │           │
│           │──────────────────────────────────│           │
│           │  Mode                            │           │
│           │  Enter Interact Mode — Switch to │           │
│           │  Enter Normal Mode — Switch to no│           │
│           │                                  │           │
│           │  Navigation                      │           │
│           │  Focus Left — Move focus to the l│           │
│           ╰──────────────────────────────────╯           │
│                                                          │
│                                                          │
│                                                          │
╰──────────────────────────────────────────────────────────╯
  type  filter ·  Enter  run ·  Esc  cancel
